# eris-debate-backend

./: .env  Cargo.toml  README.md  example.env
.sqlx/: query-0080272a88b5c2f1de4d235a2b4b2834c0662a7ffecf7ae48f26cc4da5751f82.json  query-3291f2885cab93cf21f73e194cf6bcf184ac3ab763b421ca71c883b874110656.json  query-3c09174f00b7b4bdcfc998130092a90f86e2e11e738755c7315e1bc5e975f2e2.json  query-3f4a5c59cef21f6fa6561f036b82fb66b7911f4a5e71c8b16f20dea824a725dd.json  query-3f673a66072172272497def35b7e0cfff01815da6290a715efb7e05a70669aa9.json  query-460d821d5784063e61b86137c4b4160d59e8eb5704368fbd66425f2b274e66d7.json  query-4cf2d288e9556901aa8db2b7bd6689b506fb89d6225beabe67b122b93608c7f2.json  query-5d55610cb1eef4a1c5bc2de5437e6c765558b413632e6bb4877b2e05f87d5c9d.json  query-6cb0408e70c99179303ba6df28e20d40dc5dd8f6943610f7bc6b5308600ca115.json  query-849fd523b6dfcd5b3ae8ca3b55557344cd6359757730ef0b4425101e45761b22.json  query-84f8436f77401c0223a3e24813a11d58b798352101f8653ca208052dc0778212.json  query-85c4d1ef8a6e24813dac8b6e6fa23ce145197e695c49546854deb606d7ef1eec.json  query-a7cdcd4053827c693f229ce7edcd63b47fe8327c3f0bf99e38b804ed61342ef8.json  query-b1bc8efe0d4b4ef35fa4ed70b065975748df07ba2d81eb652f0033641e2767d3.json  query-b4d0488ae8a9f0280b57955c09a6c7bd80a227e069e204714b428b6239158dce.json  query-b54b3720beecbec006e8d79df9dc33c5c34446c2b902c24abba722837f8996f7.json  query-c8e0ecdd04e675ceedf3dd33afbaf12ebb79a8c8914e6eae7a6bb32e33892c70.json  query-cc41fe89ed3770701be9becb0b7e3f16eff05c8c94d5542bd50dd8eabf403802.json  (+2 more)
database/: clear.sql  init.sql  test_data.sql
(+37 files in other folders)
