[package]
name = "eris"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
actix-web = "4.4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Cryptography
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"

# Configuration & logging
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"

# Email
lettre = "0.11"

[dependencies.cookie]
version = "0.18"
features = ["secure"]
